feat: Refactor project structure and update dependencies
Restructures the project to separate frontend and backend into distinct packages. Updates various dependencies to their latest compatible versions and adjusts import maps in `index.html` for CDN resolution. Introduces Docker Compose for local development and deployment.

--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
+
 {
-  "name": "github-actions-runner-monitor",
+  "name": "actions-monitor-frontend",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
     "@google/genai": "^1.25.0",
+    "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.2.1",
-    "express": "^5.1.0",
-    "cors": "^2.8.5",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13"
   }
 }
