--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,12 @@
+
 {
   "name": "actions-monitor-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "tsx watch index.ts"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx watch index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
