Refactor backend to migrate from Prisma to TypeORM
- Replaced PrismaClient with TypeORM DataSource for database interactions.
- Updated API routes to use TypeORM repositories for CRUD operations.
- Created entities for Installation, Job, Metric, and User with appropriate relationships.
- Implemented database connection and disconnection logic in db.ts.
- Added seed script to populate the database with initial data.
- Updated README with setup instructions and migration checklist.
- Added .env.example for environment variable configuration.
- Ensured TypeScript decorators are enabled in tsconfig.json.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,9 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "types": ["node"]
+    "types": ["node"],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
