--- a/server/package.json
+++ b/server/package.json
@@ -7,31 +7,30 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "seed": "tsx prisma/seed.ts"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "typeorm:generate": "ts-node-esm ./node_modules/typeorm/cli.js schema:log",
+    "typeorm:migrate:run": "ts-node-esm ./node_modules/typeorm/cli.js migration:run",
+    "typeorm:migrate:generate": "ts-node-esm ./node_modules/typeorm/cli.js migration:generate -n"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.7.0",
-    "@google/generative-ai": "^0.1.3",
-    "@octokit/auth-app": "^6.0.3",
-    "@octokit/rest": "^20.0.2",
-    "@octokit/webhooks": "^12.0.10",
-    "@prisma/client": "^5.8.0",
+    "@google-cloud/storage": "^7.17.2",
+    "@google/generative-ai": "^0.24.1",
+    "@octokit/auth-app": "^8.1.1",
+    "@octokit/rest": "^22.0.0",
+    "@octokit/webhooks": "^14.1.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
-    "prisma": "^5.8.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.9.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
