feat: Implement GitHub OAuth authentication flow with callback handling and user data retrieval

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,10 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/github_actions_monitor_dev
 PORT=3001
 FRONTEND_URL=http://localhost:5173
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=Iv23ctWkbzHS5mHAzOIg
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+
+# GitHub Webhooks
 GITHUB_WEBHOOK_SECRET=development-secret
