--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@octokit/auth-app": "^8.1.1",
     "@octokit/rest": "^22.0.0",
     "@octokit/webhooks": "^14.1.3",
+    "axios": "^1.12.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
