--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,13 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/github_actions_monitor_dev
-PORT=3001
-FRONTEND_URL=http://localhost:5173
+# Environment
+NODE_ENV=development
 
-# GitHub OAuth
-GITHUB_CLIENT_ID=Iv23ctWkbzHS5mHAzOIg
-GITHUB_CLIENT_SECRET=your_github_client_secret_here
+# Server
+HOST=localhost
+PORT=8080
 
-# GitHub Webhooks
-GITHUB_WEBHOOK_SECRET=development-secret
+# CORS
+CORS_ORIGIN=http://localhost:8080
+
+# Rate Limiting
+COMMON_RATE_LIMIT_MAX_REQUESTS=1000
+COMMON_RATE_LIMIT_WINDOW_MS=1000
