--- a/server/package.json
+++ b/server/package.json
@@ -1,39 +1,88 @@
 {
-  "name": "github-actions-monitor-backend",
+  "name": "actionslogshipper",
   "version": "1.0.0",
-  "description": "Backend for GitHub Actions Runner Observability Tool",
-  "main": "dist/index.js",
+  "description": "A simple tool that receives workflow_run event, downloads the logs and ships to a supported blob provider",
+  "keywords": [
+    "actions",
+    "blob",
+    "logs"
+  ],
+  "homepage": "https://github.com/wechuli/actionslogshipper#readme",
+  "bugs": {
+    "url": "https://github.com/wechuli/actionslogshipper/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wechuli/actionslogshipper.git"
+  },
+  "license": "MIT",
+  "author": "wechuli",
+  "main": "src/index.ts",
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
+  },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
+    "start:dev": "tsx src/index.ts --watch",
+    "start:prod": "node ./dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "seed": "tsx prisma/seed.ts",
-    "typeorm:generate": "ts-node-esm ./node_modules/typeorm/cli.js schema:log",
-    "typeorm:migrate:run": "ts-node-esm ./node_modules/typeorm/cli.js migration:run",
-    "typeorm:migrate:generate": "ts-node-esm ./node_modules/typeorm/cli.js migration:generate -n"
-  },
-  "dependencies": {
-    "@google-cloud/storage": "^7.17.2",
-    "@google/generative-ai": "^0.24.1",
-    "@octokit/auth-app": "^8.1.1",
-    "@octokit/rest": "^22.0.0",
-    "@octokit/webhooks": "^14.1.3",
-    "axios": "^1.12.2",
-    "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "helmet": "^8.1.0",
-    "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "clean": "rm -rf dist coverage",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.9.1",
-    "ts-node": "^10.9.2",
+    "@types/jest": "^30.0.0",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.7.2",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "http-status-codes": "^2.3.0",
+    "morgan": "^1.10.1",
+    "pino": "^10.0.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2",
+    "zod": "^4.1.12"
   }
 }
