--- a/server/.env.example
+++ b/server/.env.example
@@ -11,3 +11,13 @@ CORS_ORIGIN=http://localhost:8080
 # Rate Limiting
 COMMON_RATE_LIMIT_MAX_REQUESTS=1000
 COMMON_RATE_LIMIT_WINDOW_MS=1000
+
+# MongoDB Configuration
+MONGO_ROOT_USERNAME=admin
+MONGO_ROOT_PASSWORD=changeme123
+MONGO_DATABASE=github_actions_metrics
+MONGO_PORT=27017
+MONGO_URI=mongodb://admin:changeme123@localhost:27017/github_actions_metrics?authSource=admin
+
+# Session
+SESSION_KEY=your-secret-session-key-here
