--- a/server/package.json
+++ b/server/package.json
@@ -62,7 +62,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.7.2",
     "@types/supertest": "^6.0.3",
@@ -77,8 +79,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
+    "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "pino": "^10.0.0",
     "pino-http": "^11.0.0",
