--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,6 +17,7 @@ COPY package*.json ./
 RUN npm ci --omit=dev \
 	&& npm cache clean --force
 COPY --from=builder /app/dist ./dist
-EXPOSE 3000
+# Cloud Run uses PORT environment variable, default to 8080
+EXPOSE 8080
 USER node
 CMD ["node", "dist/index.js"]
