--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -7,6 +7,7 @@ on:
         paths:
             - "client/**"
             - ".github/workflows/deploy-client.yaml"
+    workflow_dispatch:
 
 env:
     PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
