--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,6 +5,7 @@ RUN npm ci
 
 FROM node:24-alpine AS builder
 WORKDIR /app
+COPY package*.json ./
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY tsconfig.json ./
 COPY src ./src
